--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter_markdown: ^0.6.18
   shared_preferences: ^2.2.2
   flutter_dotenv: ^5.1.0
+  ikchatbot: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -18,5 +19,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
+  uses-material-design: true
   assets:
     - .env
