--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,9 @@ dependencies:
   google_generative_ai: ^0.1.0
   flutter_markdown: ^0.6.18
   shared_preferences: ^2.2.2
-  flutter_dotenv: ^5.1.0
   ikchatbot: ^1.0.5
+  flutter_dotenv: ^5.1.0
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
